rns-lang/src/lexer/snapshots/brackets_parens-multiple_brackets.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
[[I
----- TOKENS -----
KIND             | SPAN  | TEXT
----             | ----  | ----
OpenBracket      | 0..1  | [
OpenBracket      | 1..2  | [
Identifier("I")  | 2..3  | I
Newline          | 3..4  | \n
Eof              | 4..4  |
