rns-lang/src/lexer/snapshots/brackets_parens-open_paren.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
(
----- TOKENS -----
KIND                   | SPAN  | TEXT
----                   | ----  | ----
MethodDescriptor("(")  | 0..1  | (
Newline                | 1..2  | \n
Eof                    | 2..2  |
