rns-lang/src/lexer/snapshots/brackets_parens-parens_in_sequence.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
()
----- TOKENS -----
KIND                    | SPAN  | TEXT
----                    | ----  | ----
MethodDescriptor("()")  | 0..2  | ()
Newline                 | 2..3  | \n
Eof                     | 3..3  |
