rns-lang/src/lexer/snapshots/comments-after_token.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.class ; this is a comment
----- TOKENS -----
KIND      | SPAN    | LSP       | TEXT
----      | ----    | ---       | ----
DotClass  | 0..6    | 0:0..6    | .class
Newline   | 26..27  | 0:26..27  | \n
Eof       | 27..27  | 1:0..0    |
