rns-lang/src/lexer/snapshots/comments-empty.snap
---
source: rns/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
;
----- TOKENS -----
KIND     | SPAN  | TEXT
----     | ----  | ----
Newline  | 1..2  | \n
Eof      | 2..2  |
